@@ -14,7 +14,7 @@ import com.loan.hero.customer.data.dto.request.Decision;
 import com.loan.hero.customer.data.dto.request.InitRequest;
 import com.loan.hero.customer.data.dto.request.SignUpRequest;
 import com.loan.hero.customer.data.dto.request.UpdateCustomerRequest;
-import com.loan.hero.customer.data.dto.response.AgreementDecision;
+import com.loan.hero.customer.data.models.enums.AgreementDecision;
 import com.loan.hero.customer.data.dto.response.InitResponse;
 import com.loan.hero.customer.data.models.Customer;
 import com.loan.hero.customer.data.repositories.CustomerRepository;
@@ -33,6 +33,7 @@ import com.loan.hero.notification.dto.MailInfo;
 import com.loan.hero.notification.interfaces.InitTokenService;
 import com.loan.hero.notification.interfaces.MailService;
 import lombok.AllArgsConstructor;
+import org.hibernate.mapping.Collection;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -44,16 +45,13 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.Period;
 import java.time.format.DateTimeFormatter;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import static com.loan.hero.auth.user.data.models.Role.COSTUMER;
-import static com.loan.hero.customer.data.dto.response.AgreementDecision.ACCEPT;
-import static com.loan.hero.customer.data.dto.response.AgreementDecision.REJECT;
+import static com.loan.hero.customer.data.models.enums.AgreementDecision.ACCEPT;
+import static com.loan.hero.customer.data.models.enums.AgreementDecision.REJECT;
 import static com.loan.hero.loan.data.models.LoanStatus.ACTIVE;
 import static com.loan.hero.loan.data.models.LoanStatus.CLOSED;
 
@@ -105,7 +103,7 @@ public class CustomerServiceImpl implements CustomerService {
         );
         String content = templateEngine.process("customer_mail", context);
         EmailRequest emailRequest = EmailRequest.builder()
-                .to(List.of(new MailInfo(username, email)))
+                .to(Collections.singletonList(new MailInfo(username, email)))
                 .subject("Welcome to Hero Money")
                 .htmlContent(content)
                 .build();
@@ -218,11 +216,6 @@ public class CustomerServiceImpl implements CustomerService {
         Loan loan = loanService.findById(loanId);
         return loan.getLoanStatus();
     }
-
-//    @Override
-//    public Map<String, String> allLoansStatus(Long customerId) {
-//        return null;
-//    }
 
     @Override
     public Map<String, String> allLoansStatus() {
